2011-01-20  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        REGRESSION (r72119): Audio never plays on Star Wars intro animation
        https://bugs.webkit.org/show_bug.cgi?id=52467

        Test the ability to read audio/m4a files.  Disabled this new test
        on the chromium and qt platforms, as they do not support M4A/AAC.

        * media/audio-mpeg4-supported-expected.txt: Added.
        * media/audio-mpeg4-supported.html: Added.
        * media/content/silence.m4a: Added.
        * platform/chromium/test_expectations.txt:
        * platform/qt/Skipped:
2011-01-20  Jer Noble  <jer.noble@apple.com>

        Reviewed by Eric Carlson.

        REGRESSION (r72119): Audio never plays on Star Wars intro animation
        https://bugs.webkit.org/show_bug.cgi?id=52467

        QuickTime's eat/m4a movie importer compontent doesn't list audio/m4a as a mime
        type which it supports, though it handles .m4a files just fine.  Change the way
        we build the list of supported MIME Types through a new WebKitSystemInterface
        function.

        Caused by r72119, which adds system-specific extension->MIME entries to the cache
        before global entries, and the system-specific entries include QuickTime's registry
        entries which contain the audio/m4a MIME type, while its components do not.

        Test: media/audio-mpeg4-supported.html

        * WebCore.vcproj/QTMovieWinCommon.vsprops:
        * platform/graphics/win/QTMovie.cpp:
        (getMIMETypeCallBack):
        (initializeSupportedTypes):
        (QTMovie::countSupportedTypes): gSupportedTypes is now a CFArrayRef.
        (QTMovie::getSupportedType): Ditto.
2011-01-24  Jer Noble  <jer.noble@apple.com>

        Reviewed by Eric Carlson.

        REGRESSION (r72119): Audio never plays on Star Wars intro animation
        https://bugs.webkit.org/show_bug.cgi?id=52467

        Add wkGetQuickTimeMIMETypeList() function.

        * win/include/WebKitSystemInterface/WebKitSystemInterface.h:
        * win/lib/WebKitSystemInterface.lib:

Canonical link: https://commits.webkit.org/66851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76621 268f45cc-cd09-0410-ab3c-d52691b4dbfc